src/main/java/com/example/demo/error/ConflictException.java
package com.example.demo.error;

public class ConflictException extends RuntimeException {
  public ConflictException(String message) {
    super(message);
  }
}
